--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cropper-js",
+  "name": "vue-cropper-js-simplify",
   "version": "1.0.0",
   "main": "dist/vue-cropper-js.common.js",
   "scripts": {
